test_scores/negative_dimers/features/P49915.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P49915.pkl.xz